sdbfs: added toplevel Makefile; */Makefile: support all targets
Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/sdbfs/lib/Makefile
+++ b/sdbfs/lib/Makefile
@@ -38,3 +38,6 @@ $(LIB): $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIB) *~ core
+
+# add the other unused targets, so the rule in ../Makefile works
+modules install modules_install:
