sdbfs: Makefile: build user space first
According to the kernel headers you have, compiling the kernel part
may fail. So compile userspace first, in case you need gensdbfs alone.
Thanks to Matthieu Cattin for noting this.

Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/sdbfs/Makefile
+++ b/sdbfs/Makefile
@@ -1,5 +1,5 @@
 
-DIRS = kernel lib userspace doc
+DIRS = lib userspace kernel doc
 
 all clean modules install modules_install:
 	for d in $(DIRS); do $(MAKE) -C $$d $@ || exit 1; done
