sdbfs/lib: add -I../include, to ease external projects
External projects copying this directory will most likely have
their own "include" directory, but not always "include/linux".
This, use -I../include to they can place sdb.h in there without
modifying their copy of this Makefile.

Signed-off-by: Alessandro Rubini <rubini@gnudd.com>

--- a/sdbfs/lib/Makefile
+++ b/sdbfs/lib/Makefile
@@ -20,7 +20,7 @@ OBJDUMP         = $(CROSS_COMPILE)objdump
 ENDIAN := $(shell ./check-endian $(CC))
 
 CFLAGS = -Wall -ggdb -O2
-CFLAGS += -I../include/linux # for <sdb.h>
+CFLAGS += -I../include/linux -I../include # for <sdb.h>
 CFLAGS += -ffunction-sections -fdata-sections
 CFLAGS += -Wno-pointer-sign
 CFLAGS += $(ENDIAN) $(LINUXINCLUDE)
