wishbone-serial: do not build for kernel v3.10+

--- a/pcie-wb/Makefile
+++ b/pcie-wb/Makefile
@@ -1,26 +1,19 @@
-#export PATH=$PATH:/share/eldk/bin:/share/eldk/usr/bin
-#export CROSS_COMPILE=ppc_4xxFP-
-#export ARCH=powerpc
+ifneq ($(KERNELRELEASE),)
+# When Makefile is invoked from kernel build system, define objects
 
-# This is useful if cross-compiling. Taken from kernel Makefile (CC changed)
-#AS      =$(CROSS_COMPILE)as
-#LD      =$(CROSS_COMPILE)ld
-#CC      =$(CROSS_COMPILE)gcc
-#CPP     =$(CC) -E
-#AR      =$(CROSS_COMPILE)ar
-#NM      =$(CROSS_COMPILE)nm
-#STRIP   =$(CROSS_COMPILE)strip
-#OBJCOPY =$(CROSS_COMPILE)objcopy
-#OBJDUMP =$(CROSS_COMPILE)objdump
+obj-m := pcie_wb.o wishbone.o spec_wb.o
+# Only build wishbone-serial if it was missing
+ifneq ($(CONFIG_USB_SERIAL_WISHBONE),m)
+ifneq ($(CONFIG_USB_SERIAL_WISHBONE),y)
+obj-m += wishbone-serial.o
+endif
+endif
 
+else
+# When the Makefile is run directly, invoke the kernel build system
 
 KERNELVER ?= `uname -r`
 KERNELDIR ?= /lib/modules/$(KERNELVER)/build
-ifneq ($(KERNELRELEASE),)
-	obj-m	:= pcie_wb.o wishbone.o spec_wb.o wishbone-serial.o
-else
-	KERNELDIR ?= /lib/modules/$(shell uname -r)/build
-	PWD       := $(shell pwd)
 
 all:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD)
@@ -29,8 +22,7 @@ install:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
 	depmod -a
 
-endif
-
 clean:
 	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions
 
+endif
