pcie-wb: PWD not set on some versions of make

--- a/pcie-wb/Makefile
+++ b/pcie-wb/Makefile
@@ -14,6 +14,7 @@ else
 
 KERNELVER ?= `uname -r`
 KERNELDIR ?= /lib/modules/$(KERNELVER)/build
+PWD       := $(shell pwd)
 
 all:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD)
